fix:需要調整為先用SubRouteUID比對一次，再用RouteUID比對一次

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -16,6 +16,12 @@
     "from shapely.ops import substring\n",
     "\n",
     "# 00 Setup\n",
+    "def create_folder(folder_name):\n",
+    "    \"\"\"建立資料夾\"\"\"\n",
+    "    if not os.path.exists(folder_name):\n",
+    "        os.makedirs(folder_name)\n",
+    "    return os.path.abspath(folder_name)\n",
+    "\n",
     "def findfiles(filefolderpath, filetype='.csv', recursive=True):\n",
     "    \"\"\"\n",
     "    尋找指定路徑下指定類型的檔案，並返回檔案路徑列表。\n",
@@ -298,9 +304,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_1352\\3837998952.py:132: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23296\\1879476922.py:138: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_1352\\3837998952.py:135: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23296\\1879476922.py:141: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
      ]
     }
@@ -350,25 +356,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "2980dc67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_route[\"SubRouteUID\"] = df_route[\"SubRouteUID\"].fillna(df_route[\"RouteUID\"])\n",
+    "\n",
+    "df_route[\"SubRouteUID\"] = df_route[\"SubRouteUID\"].fillna(\n",
+    "    df_route[\"RouteUID\"].astype(str) + \"0\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c00e0663",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "只在 df_route 出現的 SubRouteUID：\n",
-      "1\n",
-      "\n",
-      "只在 df_seq 出現的 SubRouteUID：\n",
-      "801\n",
-      "\n",
-      "兩邊都有的 SubRouteUID：\n",
-      "149\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 取出兩邊的 SubRouteUID（轉成 set 好比較）\n",
     "route_set = set(df_route['SubRouteUID'])\n",
@@ -390,7 +395,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "358907c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_seq[df_seq['SubRouteUID'].isin(only_in_seq)] [['RouteUID', 'RouteName_Zh', 'SubRouteUID', 'SubRouteName_Zh']].drop_duplicates()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0753599c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "0dda771e",
    "metadata": {},
    "outputs": [],
@@ -410,10 +433,228 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_route = gdf_route[gdf_route['SubRouteUID'].isin(in_both)].reset_index(drop=True)\n",
-    "df_seq = df_seq[df_seq['SubRouteUID'].isin(in_both)].reset_index(drop=True)\n",
+    "# gdf_route = gdf_route[gdf_route['SubRouteUID'].isin(in_both)].reset_index(drop=True)\n",
+    "# df_seq = df_seq[df_seq['SubRouteUID'].isin(in_both)].reset_index(drop=True)\n",
     "gdf_seq = dataframe_to_point(df_seq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")\n",
     "gdf_route.rename(columns={'Geometry':'geometry'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c2e20da0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23296\\1748457072.py:28: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  gdf_routesegment.to_file(routesegment_filepath,\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "  write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteUID' to 'SubRouteUI'\n",
+      "  ogr_write(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 02 拆分路線\n",
+    "routesegment_folder = create_folder(os.path.join(os.getcwd(), '..', \"03_處理後資料\", \"01_公車路線依站序拆分\"))\n",
+    "\n",
+    "# 02-1 將公車站序點位投影到路線上\n",
+    "gdf_snapstop = snap_points_to_line(gdf_seq, gdf_route,\n",
+    "                                    route_id_col='SubRouteUID',\n",
+    "                                    route_direction_col='Direction',\n",
+    "                                    seq_id_col='SubRouteUID',\n",
+    "                                    seq_direction_col='Direction',\n",
+    "                                    seq_lat_col='PositionLat',\n",
+    "                                    seq_lng_col='PositionLon')\n",
+    "\n",
+    "# 02-2 依站序拆分路線\n",
+    "gdf_routesegment = split_routes(gdf_route, gdf_snapstop,\n",
+    "                                route_id_col='SubRouteUID',\n",
+    "                                route_direction_col='Direction',\n",
+    "                                seq_id_col='SubRouteUID',\n",
+    "                                seq_direction_col='Direction',\n",
+    "                                seq_seq_col='StopSequence',\n",
+    "                                seq_lat_col='PositionLat',\n",
+    "                                seq_lng_col='PositionLon')\n",
+    "\n",
+    "gdf_routesegment.rename(columns = {'ID':'SubRouteUID'}, inplace=True)\n",
+    "\n",
+    "# 輸出\n",
+    "routesegment_filepath = os.path.join(routesegment_folder, '新北市公車拆分.shp')\n",
+    "\n",
+    "gdf_routesegment.to_file(routesegment_filepath, \n",
+    "                         index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4362592d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SubRouteUID</th>\n",
+       "      <th>Direction</th>\n",
+       "      <th>StartSeq</th>\n",
+       "      <th>EndSeq</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NWT162088</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>LINESTRING (121.45933 24.96777, 121.45934 24.9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NWT162088</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>LINESTRING (121.45937 24.97007, 121.45934 24.9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NWT162088</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>LINESTRING (121.45952 24.97132, 121.4595 24.97...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NWT162088</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>LINESTRING (121.45882 24.97271, 121.45876 24.9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NWT162088</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>LINESTRING (121.45876 24.97428, 121.45876 24.9...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6651</th>\n",
+       "      <td>NWT162456</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>LINESTRING (121.84608 25.11031, 121.84577 25.1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6652</th>\n",
+       "      <td>NWT162456</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>LINESTRING (121.84262 25.10937, 121.84257 25.1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6653</th>\n",
+       "      <td>NWT162456</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>LINESTRING (121.82945 25.11098, 121.82919 25.1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6654</th>\n",
+       "      <td>NWT162456</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>LINESTRING (121.82639 25.10932, 121.82612 25.1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6655</th>\n",
+       "      <td>NWT162456</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "      <td>LINESTRING (121.80793 25.10775, 121.80587 25.1...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6656 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     SubRouteUID  Direction  StartSeq  EndSeq  \\\n",
+       "0      NWT162088          0         1       2   \n",
+       "1      NWT162088          0         2       3   \n",
+       "2      NWT162088          0         3       4   \n",
+       "3      NWT162088          0         4       5   \n",
+       "4      NWT162088          0         5       6   \n",
+       "...          ...        ...       ...     ...   \n",
+       "6651   NWT162456          0        13      14   \n",
+       "6652   NWT162456          0        14      15   \n",
+       "6653   NWT162456          0        15      16   \n",
+       "6654   NWT162456          0        16      17   \n",
+       "6655   NWT162456          0        17      18   \n",
+       "\n",
+       "                                               geometry  \n",
+       "0     LINESTRING (121.45933 24.96777, 121.45934 24.9...  \n",
+       "1     LINESTRING (121.45937 24.97007, 121.45934 24.9...  \n",
+       "2     LINESTRING (121.45952 24.97132, 121.4595 24.97...  \n",
+       "3     LINESTRING (121.45882 24.97271, 121.45876 24.9...  \n",
+       "4     LINESTRING (121.45876 24.97428, 121.45876 24.9...  \n",
+       "...                                                 ...  \n",
+       "6651  LINESTRING (121.84608 25.11031, 121.84577 25.1...  \n",
+       "6652  LINESTRING (121.84262 25.10937, 121.84257 25.1...  \n",
+       "6653  LINESTRING (121.82945 25.11098, 121.82919 25.1...  \n",
+       "6654  LINESTRING (121.82639 25.10932, 121.82612 25.1...  \n",
+       "6655  LINESTRING (121.80793 25.10775, 121.80587 25.1...  \n",
+       "\n",
+       "[6656 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_routesegment"
    ]
   },
   {
@@ -424,25 +665,28 @@
    "outputs": [],
    "source": [
     "# 把站點投影到路線上\n",
-    "gdf_snapstop = snap_points_to_line(gdf_seq, gdf_route,\n",
-    "                                    route_id_col='SubRouteUID',\n",
-    "                                    route_direction_col='Direction',\n",
-    "                                    seq_id_col='SubRouteUID',\n",
-    "                                    seq_direction_col='Direction',\n",
-    "                                    seq_lat_col='PositionLat',\n",
-    "                                    seq_lng_col='PositionLon')\n",
+    "\n",
     "# 用站點將路線進行拆分\n",
-    "gdf_routesegment = split_routes(gdf_route, gdf_snapstop,\n",
-    "                                route_id_col='SubRouteUID',\n",
-    "                                route_direction_col='Direction',\n",
-    "                                seq_id_col='SubRouteUID',\n",
-    "                                seq_direction_col='Direction',\n",
-    "                                seq_seq_col='StopSequence',\n",
-    "                                seq_lat_col='PositionLat',\n",
-    "                                seq_lng_col='PositionLon')\n",
-    "gdf_routesegment.rename(columns = {'ID':'SubRouteUID'}, inplace=True)\n",
+    "\n",
+    "\n",
     "gdf_routesegment.to_file(r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\00_TDX資料下載\\Trial\\新北市拆分路網圖.shp', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b8146b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa9beaf4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
