fix: 先調整為subrouteUID先執行，但還沒有過濾routeUID，這邊需要待處理

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -296,21 +296,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4658bda7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23296\\1879476922.py:138: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
-      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23296\\1879476922.py:141: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
-      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 01-01 讀取站序xml\n",
     "\n",
@@ -330,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e0a78a03",
    "metadata": {},
    "outputs": [],
@@ -345,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "164ae355",
    "metadata": {},
    "outputs": [],
@@ -413,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0dda771e",
    "metadata": {},
    "outputs": [],
@@ -428,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7502ca9b",
    "metadata": {},
    "outputs": [],
@@ -441,23 +430,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c2e20da0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_23296\\1748457072.py:28: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  gdf_routesegment.to_file(routesegment_filepath,\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
-      "  write(\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteUID' to 'SubRouteUI'\n",
-      "  ogr_write(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 02 拆分路線\n",
     "routesegment_folder = create_folder(os.path.join(os.getcwd(), '..', \"03_處理後資料\", \"01_公車路線依站序拆分\"))\n",
@@ -492,169 +468,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4362592d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SubRouteUID</th>\n",
-       "      <th>Direction</th>\n",
-       "      <th>StartSeq</th>\n",
-       "      <th>EndSeq</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NWT162088</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>LINESTRING (121.45933 24.96777, 121.45934 24.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NWT162088</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>LINESTRING (121.45937 24.97007, 121.45934 24.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NWT162088</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>LINESTRING (121.45952 24.97132, 121.4595 24.97...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NWT162088</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>LINESTRING (121.45882 24.97271, 121.45876 24.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NWT162088</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>LINESTRING (121.45876 24.97428, 121.45876 24.9...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6651</th>\n",
-       "      <td>NWT162456</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>14</td>\n",
-       "      <td>LINESTRING (121.84608 25.11031, 121.84577 25.1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6652</th>\n",
-       "      <td>NWT162456</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "      <td>LINESTRING (121.84262 25.10937, 121.84257 25.1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6653</th>\n",
-       "      <td>NWT162456</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>16</td>\n",
-       "      <td>LINESTRING (121.82945 25.11098, 121.82919 25.1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6654</th>\n",
-       "      <td>NWT162456</td>\n",
-       "      <td>0</td>\n",
-       "      <td>16</td>\n",
-       "      <td>17</td>\n",
-       "      <td>LINESTRING (121.82639 25.10932, 121.82612 25.1...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6655</th>\n",
-       "      <td>NWT162456</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17</td>\n",
-       "      <td>18</td>\n",
-       "      <td>LINESTRING (121.80793 25.10775, 121.80587 25.1...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6656 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     SubRouteUID  Direction  StartSeq  EndSeq  \\\n",
-       "0      NWT162088          0         1       2   \n",
-       "1      NWT162088          0         2       3   \n",
-       "2      NWT162088          0         3       4   \n",
-       "3      NWT162088          0         4       5   \n",
-       "4      NWT162088          0         5       6   \n",
-       "...          ...        ...       ...     ...   \n",
-       "6651   NWT162456          0        13      14   \n",
-       "6652   NWT162456          0        14      15   \n",
-       "6653   NWT162456          0        15      16   \n",
-       "6654   NWT162456          0        16      17   \n",
-       "6655   NWT162456          0        17      18   \n",
-       "\n",
-       "                                               geometry  \n",
-       "0     LINESTRING (121.45933 24.96777, 121.45934 24.9...  \n",
-       "1     LINESTRING (121.45937 24.97007, 121.45934 24.9...  \n",
-       "2     LINESTRING (121.45952 24.97132, 121.4595 24.97...  \n",
-       "3     LINESTRING (121.45882 24.97271, 121.45876 24.9...  \n",
-       "4     LINESTRING (121.45876 24.97428, 121.45876 24.9...  \n",
-       "...                                                 ...  \n",
-       "6651  LINESTRING (121.84608 25.11031, 121.84577 25.1...  \n",
-       "6652  LINESTRING (121.84262 25.10937, 121.84257 25.1...  \n",
-       "6653  LINESTRING (121.82945 25.11098, 121.82919 25.1...  \n",
-       "6654  LINESTRING (121.82639 25.10932, 121.82612 25.1...  \n",
-       "6655  LINESTRING (121.80793 25.10775, 121.80587 25.1...  \n",
-       "\n",
-       "[6656 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gdf_routesegment"
+    "gdf_routesegment['SubRouteUID'].unique()."
    ]
   },
   {
@@ -675,18 +494,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b8146b0",
+   "id": "7619cc68",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gdf_seq[['RouteUID','SubRouteUID', 'RouteName_Zh', 'SubRouteName_Zh']].drop_duplicates().sort_values(['SubRouteUID'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa9beaf4",
+   "id": "0b8146b0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df_GTSFseq = pd.read_csv(r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\其他分析資料\\TDX_GTFS_20250617\\shapes.txt\")\n",
+    "# df_GTSFseq['RouteUID'] = df_GTSFseq['shape_id'].str.split('_').str[0]\n",
+    "# df_GTSFseq['Direction'] = df_GTSFseq['shape_id'].str.split('_').str[1]\n",
+    "# df_GTSFseq.rename(columns = {'shape_id':'ShapeUID', \n",
+    "#                             'shape_pt_lat':'PositionLat',\n",
+    "#                             'shape_pt_lon':'PositionLon',\n",
+    "#                             'shape_pt_sequence':'StopSequence'}, \n",
+    "#                             inplace=True)\n",
+    "\n",
+    "# gdf_GTSFseq = dataframe_to_point(df_GTSFseq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")"
+   ]
   }
  ],
  "metadata": {
