feat: 加入整併合併功能，簡化部分程序

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -51,6 +51,30 @@
     "                filelist.append(file_path)\n",
     "\n",
     "    return filelist\n",
+    "\n",
+    "def read_combined_dataframe(file_list, filepath = True):\n",
+    "    dataframes = []\n",
+    "    \n",
+    "    for file in file_list:\n",
+    "        try:\n",
+    "            if file.endswith('.csv'):\n",
+    "                df = pd.read_csv(file)\n",
+    "            elif file.endswith('.shp'):\n",
+    "                df = gpd.read_file(file)\n",
+    "            elif file.endswith(('.xls', '.xlsx')):\n",
+    "                df = pd.read_excel(file)\n",
+    "            else:\n",
+    "                print(f\"Unsupported file format: {file}\")\n",
+    "                continue\n",
+    "            if filepath:\n",
+    "                df['FilePath'] = file  # 添加來源檔案路徑欄位\n",
+    "            dataframes.append(df)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error reading {file}: {e}\")\n",
+    "\n",
+    "    # 合併所有 DataFrame\n",
+    "    combined_df = pd.concat(dataframes, ignore_index=True)\n",
+    "    return combined_df\n",
     "\n",
     "def dataframe_to_point(df, lon_col, lat_col, crs=\"EPSG:4326\", target_crs=\"EPSG:3826\"):\n",
     "    '''\n",
@@ -299,22 +323,30 @@
    "execution_count": null,
    "id": "4658bda7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21992\\3494255386.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_21992\\3494255386.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
+     ]
+    }
+   ],
    "source": [
     "# 01-01 讀取站序xml\n",
     "\n",
     "# 讀取所有站序 xml，轉存為 csv\n",
     "busstopseq_folder = os.path.join(os.getcwd(), '..', \"00_TDX資料下載\", \"01公車站序資料\")\n",
     "xml_files = findfiles(busstopseq_folder, filetype='.xml', recursive=False)\n",
-    "\n",
     "for xmlfile in xml_files:\n",
     "    df = read_bus_stop_of_route_xml(xmlfile)\n",
     "    df.to_csv(xmlfile.replace('.xml', '.csv'), index=False, encoding='utf-8-sig')\n",
     "\n",
     "# 整併所有的csv\n",
-    "csv_files = findfiles(busstopseq_folder, filetype='.csv', recursive=False)\n",
-    "all_dfs = [pd.read_csv(f) for f in csv_files]\n",
-    "df_seq = pd.concat(all_dfs, ignore_index=True)"
+    "df_seq = read_combined_dataframe(findfiles(busstopseq_folder, filetype='.csv', recursive=False))"
    ]
   },
   {
@@ -508,16 +540,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_GTSFseq = pd.read_csv(r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\其他分析資料\\TDX_GTFS_20250617\\shapes.txt\")\n",
-    "# df_GTSFseq['RouteUID'] = df_GTSFseq['shape_id'].str.split('_').str[0]\n",
-    "# df_GTSFseq['Direction'] = df_GTSFseq['shape_id'].str.split('_').str[1]\n",
-    "# df_GTSFseq.rename(columns = {'shape_id':'ShapeUID', \n",
-    "#                             'shape_pt_lat':'PositionLat',\n",
-    "#                             'shape_pt_lon':'PositionLon',\n",
-    "#                             'shape_pt_sequence':'StopSequence'}, \n",
-    "#                             inplace=True)\n",
+    "df_GTSFseq = pd.read_csv(r\"D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\其他分析資料\\TDX_GTFS_20250617\\shapes.txt\")\n",
+    "df_GTSFseq['RouteUID'] = df_GTSFseq['shape_id'].str.split('_').str[0]\n",
+    "df_GTSFseq['Direction'] = df_GTSFseq['shape_id'].str.split('_').str[1]\n",
+    "df_GTSFseq.rename(columns = {'shape_id':'ShapeUID', \n",
+    "                            'shape_pt_lat':'PositionLat',\n",
+    "                            'shape_pt_lon':'PositionLon',\n",
+    "                            'shape_pt_sequence':'StopSequence'}, \n",
+    "                            inplace=True)\n",
     "\n",
-    "# gdf_GTSFseq = dataframe_to_point(df_GTSFseq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")"
+    "gdf_GTSFseq = dataframe_to_point(df_GTSFseq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90a04dae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_GTSFseq['lens'] = gdf_GTSFseq['RouteUID'].str.len()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f3033f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_GTSFseq"
    ]
   }
  ],
