--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -346,12 +346,12 @@
     "    df.to_csv(xmlfile.replace('.xml', '.csv'), index=False, encoding='utf-8-sig')\n",
     "\n",
     "# 整併所有的csv\n",
-    "df_seq = read_combined_dataframe(findfiles(busstopseq_folder, filetype='.csv', recursive=False))"
+    "df_seq = read_combined_dataframe(findfiles(busstopseq_folder, filetype='.csv', recursive=False))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e0a78a03",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,10 @@
     "xml_files = findfiles(busroute_folder, filetype='.xml', recursive=False)\n",
     "for xmlfile in xml_files:\n",
     "    df = read_bus_shape_of_route_xml(xmlfile)\n",
-    "    df.to_csv(xmlfile.replace('.xml', '.csv'), index=False, encoding='utf-8-sig')"
+    "    df.to_csv(xmlfile.replace('.xml', '.csv'), index=False, encoding='utf-8-sig')\n",
+    "\n",
+    "# 整併所有的csv\n",
+    "df_route = read_combined_dataframe(findfiles(busroute_folder, filetype='.csv', recursive=False))"
    ]
   },
   {
